src/Components/Header/header.css
/* header css */
.header {
  background-color: white;
  border-bottom: 2px solid var(--dark-blue);
}

/* header container */
.header .main-section {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* - - - - - - -  */
/* logo and text */
.lockup {
  text-decoration: none;
  display: flex;
  align-items: center;
}
.header-logo {
  width: 1.7rem;
  height: 1.7rem;
}
.header-logo .rect,
.header-logo .ellipse {
  fill: var(--dark-blue);
}
.app-title {
  font-size: 1.6rem;
  color: var(--dark-blue);
  text-align: left;
  margin-left: 0.5rem;
  font-weight: var(--bold);
  margin-bottom: 0;
}

/* - - - - - - -  */
/* menu container */
.menu-container {
  z-index: 1;
  width: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  transition: all ease-in-out 0.5s;
}
.menu-container.open {
  position: fixed;
  width: 15rem;
}
@media only screen and (min-width: 50rem) {
  .menu-container {
    position: relative;
    width: 0;
  }
  .menu-container.open {
    min-width: 15rem;
  }
}

/* - - - - - - -  */
/* menu button */
/* - refer to main section (app.css) width when editing this, and the menu */
.menu-button {
  z-index: 2;
  position: absolute;
  right: 2rem;
  top: 0.25rem;
  transition: all ease-in-out 0.5s;
}
@media only screen and (min-width: 50rem) {
  .menu-button {
    position: relative;
  }
  .menu-container.open .menu-button {
    right: -0.5rem;
  }
}
.menu-button:hover,
.menu-button.open {
  background-color: var(--light-grey);
  border-radius: 2rem;
  cursor: pointer;
}
.menu-button:hover .menu-img,
.menu-button.open .menu-img {
  fill: var(--dark-grey);
}
.menu-img {
  font-size: 2rem;
  float: right;
  display: block;
  fill: var(--dark-blue);
}

/* - - - - - - -  */
/* menu */
.nav-menu {
  z-index: 1;
  width: 15rem;
  height: 100%;
  transform: translateX(15rem);
  transition: transform ease-in-out 0.5s;
  background-color: white;
  border-left: 2px solid var(--dark-grey);
  text-align: center;
}
.menu-button.open ~ .nav-menu {
  transform: translateX(0rem);
}
@media only screen and (min-width: 50rem) {
  .nav-menu {
    position: absolute;
    top: 0;
    right: 0;
    visibility: hidden;
  }
  .menu-button.open ~ .nav-menu {
    visibility: visible;
  }
}

/* - - - - - - -  */
/* menu list items */
.menu-title {
  height: calc(3.5rem + 2px);
  line-height: calc(3.5rem + 2px);
  border-bottom: 2px solid var(--med-grey);
  font-size: 1.8rem;
  font-weight: var(--bold);
  padding: 0;
  padding-right: 1rem;
}
@media only screen and (min-width: 50rem) {
  .menu-title {
    padding: 0;
    padding-left: 1rem;
  }
}
.nav-menu li {
  margin-top: 2rem;
}
.nav-menu li:first-child {
  margin-top: 0;
}
.nav-menu a {
  padding: 0.5rem 1rem;
  text-decoration: none;
  font-size: 1.8rem;
  color: var(--dark-grey);
}
.nav-menu a:hover {
  border-bottom: 2px solid var(--dark-grey);
}

